--- a/index.html
+++ b/index.html
@@ -18,22 +18,26 @@
   </head>
 
   <body>
-    <nav class="navbar">
-      <a href="#" class="navbar-logo">Meron <span>Point</span></a>
+    <header>
+      <nav class="navbar">
+        <a href="#" class="navbar-logo">Meron <span>Point</span></a>
 
-      <div class="navbar-nav">
-        <a href="#home">Home</a>
-        <a href="#about">About Us</a>
-        <a href="#menu">Menu</a>
-        <a href="#contact">Contact</a>
-      </div>
+        <div class="navbar-nav">
+          <a href="#home">Home</a>
+          <a href="#about">About Us</a>
+          <a href="#menu">Menu</a>
+          <a href="#contact">Contact</a>
+        </div>
 
-      <div class="navbar-extra">
-        <a href="#" id="search"><i data-feather="search"></i></a>
-        <a href="#" id="shopping-cart"><i data-feather="shopping-cart"></i></a>
-        <a href="#" id="hamburger-menu"><i data-feather="menu"></i></a>
-      </div>
-    </nav>
+        <div class="navbar-extra">
+          <a href="#" id="search"><i data-feather="search"></i></a>
+          <a href="#" id="shopping-cart"
+            ><i data-feather="shopping-cart"></i
+          ></a>
+          <a href="#" id="hamburger-menu"><i data-feather="menu"></i></a>
+        </div>
+      </nav>
+    </header>
 
     <main>
       <section class="hero" id="home">
@@ -218,14 +222,13 @@
       </div>
 
       <div class="credit">
-        <p>Created by <a href="#">Meron</a> | &copy; 2025.</p>
+        <small>Created by <a href="#">Meron</a> | &copy; 2025.</small>
       </div>
     </footer>
 
     <script>
       feather.replace();
     </script>
-
     <script src="js/script.js"></script>
   </body>
 </html>
